--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   http: ^0.13.4
   cached_network_image: ^3.2.0
+  url_launcher: ^6.0.20
+  flutter_inappwebview: ^5.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
