--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   http: ^0.13.4
-  cached_network_image: ^3.2.0
+  #cached_network_image: ^3.2.0
   url_launcher: ^6.0.20
   flutter_inappwebview: ^5.3.2
 
