--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dev_dependencies:
   #cached_network_image: ^3.2.0
   url_launcher: ^6.0.20
   flutter_inappwebview: ^5.3.2
+  shimmer: ^2.0.0
+  package_info_plus: ^1.4.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
