--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dev_dependencies:
   flutter_inappwebview: ^5.3.2
   shimmer: ^2.0.0
   package_info_plus: ^1.4.2
+  path_provider: ^2.0.9
+  shared_preferences: ^2.0.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
