--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dev_dependencies:
   package_info_plus: ^1.4.2
   path_provider: ^2.0.9
   shared_preferences: ^2.0.13
+  share_plus: ^4.0.4
+  dotted_border: ^2.0.0+2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
