--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ dev_dependencies:
   shared_preferences: ^2.0.13
   share_plus: ^4.0.4
   dotted_border: ^2.0.0+2
+  google_sign_in: ^5.3.0
+  firebase_auth: ^3.3.16
+  clipboard_monitor: ^0.9.2
+  translator: ^0.1.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
