--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
   firebase_auth: ^3.3.16
   clipboard_monitor: ^0.9.2
   translator: ^0.1.7
+  cupertino_icons: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
