--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 2.0.0+100
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
@@ -46,8 +46,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   http: ^0.13.4
-  #cached_network_image: ^3.2.0
-  url_launcher: ^6.0.20
+  cached_network_image: ^3.2.0
+  url_launcher: ^6.1.0
   flutter_inappwebview: ^5.3.2
   shimmer: ^2.0.0
   package_info_plus: ^1.4.2
@@ -60,6 +60,8 @@ dev_dependencies:
   clipboard_monitor: ^0.9.2
   translator: ^0.1.7
   cupertino_icons: ^1.0.4
+  font_awesome_flutter: ^10.1.0
+  fluttertoast: ^8.0.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
