--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dev_dependencies:
   cupertino_icons: ^1.0.4
   font_awesome_flutter: ^10.1.0
   fluttertoast: ^8.0.9
+  geolocator: ^8.2.0
+  google_fonts: ^2.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
