--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dev_dependencies:
   fluttertoast: ^8.0.9
   geolocator: ^8.2.0
   google_fonts: ^2.3.2
+  shake: ^2.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
